# hirise_api_dev

./: Autoencoder.ipynb  Autoencoder_Classification.ipynb  README.md  compressed_data.txt  local_package_testing.ipynb  local_package_testing_preprocessing_module.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py  ~$hirise_design_experiments.xlsx  ~$result_summaries.pptx
.github/: test_irp_admin.py
.github/scripts/: bump_versions.py
.github/workflows/: automated_bump_and_release_to_pypi.yml  final-report.yml  hirise-api.yml  info.yml  pep8.yml  presentation.yml  project-plan.yml  publish_to_pypi.yml  pytest.yml  sphinx-docs.yml
.ipynb_checkpoints/: local_package_testing-checkpoint.ipynb
HIRISE_api/: LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
HIRISE_api/hirise/: Hirise_Image.py  Image_Client.py  __init__.py  hirise_data.csv  hirise_imgs.py  utils.py
HIRISE_api/models/: Affinity_Propagation.py  Agglomerative_Clustering.py  BIRCH.py  DBSCAN.py  Ensamble_Models.py  Ensemble_Models.py  HDBSCAN.py  KMeans.py  Mean_Shift.py  OPTICS.py  metrics.py  utils.py
HIRISE_api/preprocessing/: Data_Preparation.py  Dimension_Reduction.py  Encoding.py  Image_Loader.py  utils.py
HIRISE_api/tests/: label_list.csv  test_download_data.py  test_getinfo.py  test_hirise.py  test_models.py  test_preprocessing.py
docs/: conf.py  index.rst
docs/html/: .buildinfo  genindex.html  index.html  (+4 more)
examples/: Example_Workflow_Hirise_Package.ipynb
info/: README.md  info.json
reports/: README.md  ns1321-project-plan.tex  references.bib
(+90 files in other folders)
