[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE.txt

[flake8]
ignore = E126
exclude = 
    # Ignored due to sklearn.external.six being depreciated but developers 
    # have not migrated to the standard 'import six' method yet thus
    # mlextend.classifier will fail. This issue is currently mitigated by
    # directly injecting 'six' into the 'sklearn' module but it conflicts with 
    # PEP8 syntax
    HIRISE_api/models/Ensemble_Models.py 
    # Ignore due to corrupted update to the 'flake8' package
    # resulting in conflicting W503 error messages 
    HIRISE_api/hirise/Image_Client.py 